--- a/JAVASCRIPT/oppgave7.html
+++ b/JAVASCRIPT/oppgave7.html
@@ -1,6 +1,6 @@
 <!doctype HTML>
 <head>
-	<title>Test</title>
+	<title>oppgave7</title>
 	<meta charset="utf-8" />
 	<script>
 	
@@ -12,7 +12,7 @@
 			while (a <= 100) {
 				
 				if(a !== 0) {
-					document.getElementById("utskrift").innerHTML += ",";
+					document.getElementById("utskrift").innerHTML += ", ";
 				}
 				document.getElementById("utskrift").innerHTML += a;
 				a+=1;
