--- a/JAVASCRIPT/oppgave7b.html
+++ b/JAVASCRIPT/oppgave7b.html
@@ -1,6 +1,6 @@
 <!doctype HTML>
 <head>
-	<title>Test</title>
+	<title>oppgave7b</title>
 	<meta charset="utf-8" />
 	<script>
 	
@@ -13,7 +13,7 @@
 			while (a >= 0) {
 				
 				if(a !== 100) {
-					document.getElementById("utskrift").innerHTML += ",";
+					document.getElementById("utskrift").innerHTML += ", ";
 				}
 				document.getElementById("utskrift").innerHTML += a;
 				a-=1;
