--- a/JAVASCRIPT/oppgave7f.html
+++ b/JAVASCRIPT/oppgave7f.html
@@ -1,6 +1,6 @@
 <!doctype HTML>
 <head>
-	<title>oppgave7e</title>
+	<title>oppgave7f</title>
 	<meta charset="utf-8" />
 	<script>
 	
@@ -8,11 +8,11 @@
 		
 		function oppstart() {
 			
-			var a = 0;
+			var a = 1;
             
 			while (a <= 100) {
 				
-				if(a !== 0) {
+				if(a !== 1) {
 					document.getElementById("utskrift").innerHTML += ", ";
 				}
 				document.getElementById("utskrift").innerHTML += a;
