Ny Nettverk Side

--- a/oblig 3 nettside/itnettverk.html
+++ b/oblig 3 nettside/itnettverk.html
@@ -40,7 +40,7 @@
     <div class="banan">
         <h2 class="eple"> Nettverk </h2>
         <img class="fitscreen" src="nettverksproblemer.jpeg">
-       <p class="sjokko"> </p>
+       <p class="sjokko"> Har du nettverksproblemer? Vi hos IT proffen har løsningen. Våre kompetente montører har lang erfaring innen faget og kan løse alle problemer som blir kastet mot de. Ta kontakt for en hyggelig prat.</p>
     </div>
     
     
